adds all files for rendu

--- a/client_main.ipynb
+++ b/client_main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 44,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 45,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 48,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -212,7 +212,7 @@
      "data": {
       "text/plain": "'Hello World 😃'"
      },
-     "execution_count": 127,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 49,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 50,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 51,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 52,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 53,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 54,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 55,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 56,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 57,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 58,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 59,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -567,13 +567,13 @@
      "output_type": "stream",
      "text": [
       "Channel input:     [-1, -1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, 1]\n",
-      "Channel output:    [-1, -1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1, 0, -1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, 1, 0, 1, -1, 0, 1, -1, 0, -1, 1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, 1, -1, 0]\n",
+      "Channel output:    [0, -1, -1, 0, 1, -1, 0, -1, -1, 0, 1, 1, 0, -1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, 1, 1, 0, 1, -1, 0, 1, 1, 0, 1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, 1, 1, 0, -1, 1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, -1, 0, -1, -1, 0, 1, -1, 0, 1, -1, 0, -1, -1, 0, -1, 1, 0, 1, -1, 0, -1, 1, 0, -1, 1]\n",
       "\n",
       "Uninterleaved in:  [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
-      "Uninterleaved out: [-1, 1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Uninterleaved out: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 1, -1, 1, -1, 1, 1, 1, -1, 1, 1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, -1, -1, 1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, -1, 1, 1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, 1, -1, 1, 1]\n",
       "\n",
-      "Decoded output:    [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
-      "Erased codeword:   2 [3]\n",
+      "Decoded output:    [0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
+      "Erased codeword:   0 [3]\n",
       "\n",
       "Sent:              [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
       "Restored:          [0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0]\n",
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 60,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 61,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 62,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 63,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 64,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 65,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 66,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -894,10 +894,10 @@
       "Codeword 1:      [-1, 1, -1]\n",
       "Codeword 2:      [1, -1, -1]\n",
       "Codeword 3:      [-1, -1, 1]\n",
-      "Uninterleaved:   [ 2.80807163 -4.01369838  0.11440927 -2.16887047 -1.34246423  1.31086201\n",
-      " -1.43918073  0.84194652 -0.05421587]\n",
-      "Erased predict:  2\n",
-      "Erased real:     0\n"
+      "Uninterleaved:   [-3.7003157   4.67257827  0.08525875 -1.30690299  3.30713472  0.36413181\n",
+      " -0.48593345 -3.89383027  2.07329641]\n",
+      "Erased predict:  1\n",
+      "Erased real:     1\n"
      ]
     }
    ],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 67,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 68,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -980,7 +980,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correctness ratio:  0.7\n",
+      "Correctness ratio:  0.8\n",
       "Nb sent symbols:    4500\n"
      ]
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 69,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 70,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 71,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 72,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 73,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,8 +1272,8 @@
     "    bitarray = string_to_bitarray(str(string+bytes_to_append))\n",
     "\n",
     "    # 2. create the pairs of 2*k bits to compute checksum bits\n",
-    "    if len(bitarray) % (2 * nb_bits_send) != 0: print(\"Error, the input should have length multiple of 2k (here:\",\n",
-    "                                                      2 * nb_bits_send, \") but has length \", len(bitarray));return\n",
+    "    if len(bitarray) % (2 * nb_bits_send) != 0: print(\"Error, the input should have length multiple of 2k (here:\",2 *nb_bits_send, \") but has length \", len(bitarray)); return\n",
+    "    \n",
     "    k_bits_pairs = np.array_split(np.array(bitarray), len(bitarray) // (2 * nb_bits_send))\n",
     "\n",
     "    # 3. we create the symbol array to send\n",
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,18 +1337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# this string is 80 bytes long\n",
-    "string_to_send = \"Hello World is the CLIC event that aims at introducing students to IC Faculty wo\"\n",
+    "string_to_send = \"For a long time I would go to bed early. Sometimes, the candle barely out.123456\"\n",
     "nb_triplets, nb_symbols = first_part_procedure(string_to_send, 9, 9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 81,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1369,8 +1369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The input string was:  Hello World is the CLIC event that aims at introducing students to IC Faculty wo\n",
-      "The decoded string is: Hello World is the CLIC event that aims at introducing students to IC Faculty wo\n",
+      "The input string was:  For a long time I would go to bed early. Sometimes, the candle barely out.123456\n",
+      "The decoded string is: For a long time I would go to bed early. Sometimes, the candle barely out.123456\n",
       "Those are  equal\n",
       "we used 55188 to send it through our channel !\n"
      ]
